--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "umi-plugin-mobile-dumi",
-  "version": "0.0.9",
+  "version": "0.1.0",
   "description": "",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -8,11 +8,16 @@
     "build": "father-build"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "@umijs/utils": "^3.5.17"
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/xiaohuoni/umi-plugin-mobile-dumi"
   },
+  "authors": [
+    "xiaohuoni <xiaohuoni@gmail.com> (https://github.com/xiaohuoni)"
+  ],
+  "license": "MIT",
+  "bugs": "https://github.com/xiaohuoni/umi-plugin-mobile-dumi/issues",
+  "homepage": "https://github.com/xiaohuoni/umi-plugin-mobile-dumi#readme",
   "peerDependencies": {
     "antd-mobile": "^5.0.0-beta.4"
   },
